<resources>
    <string name="app_name">SAMA FACTURE</string>
    <string name="connection">Connection</string>
    <string name="my_facture">My Bills</string>
    <string name="new_facture">New Bill</string>
    <string name="payment_method">Payment method</string>
    <string name="search">Search here !!!!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="provider">Providers</string>
    <string name="sign_in">Sign In</string>
    <string name="help">Help</string>
    <string name="cancel">Cancel</string>
    <string name="inscription">Inscription</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="libelle">Libelle</string>
    <string name="montant">Price</string>
    <string name="newbill">New Bill</string>
    <string name="paybill">Pay Bill</string>
    <string name="save">Save</string>
    <string name="error_fields">Required fields</string>
    <string name="error_parameters">Credentials error</string>
    <string name="error_connection">Connection error</string>
    <string name="error_login_length">Login too long</string>
    <string name="error_email_format">Please enter a valid email</string>
    <string name="welcome">Welcome</string>
    <string name="wait">Please wait</string>
    <string name="success_save">Successfully</string>
    <string name="home_welcome">Sama Facture is an application that will allow you to manage all your invoices from your different suppliers in order to make your life easier.</string>
    <string name="help_text">In order to take full advantage of the application, please always configure the current year at the profile page so that all of your invoices differ according to the year. This application also offers you the possibility of recording and pay your invoices in offline mode and synchronize them once the internet connection is available all thanks to the on-board SqLite database</string>
    <string name="title_activity_nav_bar">NavBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profil">Profil</string>
    <string name="nouvelle_annee">New Year</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
