<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mybills"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/my_facture" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_profil" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/help" />
    </group>
</menu>
