<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.samafacture.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_mybills"
        android:name="com.example.samafacture.FactureActivity"
        android:label="@string/my_facture"
        tools:layout="@layout/activity_facture" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.samafacture.ui.slideshow.SlideshowFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_slideshow" />

</navigation>