<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="238dp"
        android:padding="10dp">
        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/size_title"
            android:gravity="center"
            android:text="@string/paybill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/montant"
            android:layout_marginTop="50dp"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputAnnee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:hint="@string/montant"
            android:textColor="#000" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fournisseur"
            android:layout_marginTop="150dp"
            android:textColor="#000"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/txt_input_fournisseur"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="250dp"
            android:fontFamily="sans-serif-smallcaps"
            android:hint="@string/save"/>



    </RelativeLayout>


</RelativeLayout>